--- a/index.html
+++ b/index.html
@@ -15,16 +15,37 @@
     </header>
     <main>
         <h3>There is some information about myself.</h3>
-        <p>I'm Mohamad Saad Eddin, I have 23 years,<br> I'm studying Computer science at Zarqa University</p>
-        <p>For me, my favorite car is BMW, and I love the white color </p>
-        <p>I spend alot of time on coding and learning how to improve my skills, I really like that and it's exciting
-            for me.</p>
-        <h6>That's all for now, thanks for your time.</h6>
+        <ul>
+            <li>
+                <p>I'm Mohamad Saad Eddin, I have 23 years,<br> I'm studying Computer science at Zarqa University</p>
+            </li>
+            <li>
+                <p>For me, my favorite car is BMW, and I love the white color </p>
+            </li>
+            <li>
+                <p>I spend alot of time on coding and learning how to improve my skills, I really like that and it'sexciting for me.</p>
+            </li>
+        </ul>
+        <h6>Favorite Top ten movies & serieses</h6>
+         <ol>
+                <li>Sherlok Holmez</li>
+                <li>How to get away with murder</li>
+                <li>Prison break</li>
+                <li>Lacasa de papel</li>
+                <li>The invisible guest</li>
+                <li>Friends</li>
+                <li>Mission impossibl</li>
+                <li>Now you see me</li>
+                <li>Ocean</li>
+                <li>The green mile</li>
+        </ol>
+        <h6 class="last">That's all for now, thanks for your time.</h6>
     </main>
+    
     <footer>
-        <p>All right reserved for Mohamad Saad Eddin &copy;</p>
+        <p>Copyright (c) 2020 Mohamad Saad Eddin</p>
     </footer>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
 </body>
 
 </html>
