--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <footer>
         <p>Copyright (c) 2020 Mohamad Saad Eddin</p>
     </footer>
-    <!-- <script src="js/app.js"></script> -->
+    <script src="js/app.js"></script>
 </body>
 
 </html>
